# deepracing

./: .gitattributes  .gitignore  .gitmodules  README.md  addpythonpathsrc.bash  addpythonpathsrc.ps1  asdf.txt  buildcolconvcpkg  cleanws.bat  deepracingdeps.repos  test_file.md
data-logger/: .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.txt  calibration_data.csv  code_format.xml  colcon.pkg  config.yaml  data-logger.pyproj  example_config.yaml  f1_datalogger-config-withlocalvjoypp.cmake.in  f1_datalogger-config.cmake.in  package.xml  setup.py
data-logger/cmake/: Findscreen_capture_lite.cmake  add_prepackaged_eigen.cmake  build_tbb.cmake  buildtbb.cmake  find_deps.cmake.in  get_tbb.cmake  grpc_utils.cmake  include_arma.cmake  include_yaml_cpp.cmake  screen_capture_lite_PLATFORM_LIBS.cmake  windows_stuff.cmake
data-logger/env_hook/: addpythonpath.bat.in  addpythonpath.ps1.in
data-logger/gsoap_templates/: deepf1_gsoapC.cpp  deepf1_gsoapH.h  deepf1_gsoapStub.h  envC.cpp  envH.h  envStub.h
data-logger/gsoap_templates/template_files/: gsoap_templates.h
data-logger/include/: f1_datalogger.h  math_utils.h  screen_video_capture.h  simple_screen_listener.h  simple_udp_listener.h  stdafx.h
data-logger/include/alglib/: optimization.h  solvers.h
data-logger/include/car_data/: car_data.h  deepf1_gsoap.h  deepf1_gsoap_stub.h  soap.nsmap  timestamped_car_data.h  timestamped_image_data.h
data-logger/include/deepf1_gsoap/: deepf1_gsoap.h  deepf1_gsoap.nsmap  deepf1_gsoapC.cpp  deepf1_gsoapH.h  deepf1_gsoapStub.h  deepf1_gsoap_env.cpp  deepf1_gsoap_env.h  deepf1_gsoap_env_stub.h  deepf1_gsoap_stub.h  envH.h
data-logger/include/deepf1_gsoap_conversions/: gsoap_conversions.h
data-logger/include/f1_datalogger/: f1_datalogger.h  filesystem_helper.h  pcl_types.h  proto_dll_macro.h  visibility_control.h
data-logger/include/image_logging/: F1FrameGrabManager.h  f1_framegrab_manager.h  framegrab_handler.h
data-logger/include/udp_logging/: f1_datagrab_handler.h  f1_datagrab_manager.h
data-logger/modules/: CPackSettings.cmake
data-logger/proto/: CMakeLists.txt  F1UDPData.proto  TimestampedImage.proto  protobuf_test.cpp  read_image_tag.cpp  read_udp_tag.cpp
data-logger/python/: .gitignore  CMakeLists.txt  README.txt  analyze_evaluation_run.py  analyze_evaluation_runs.py  client_test.py  compare_trackfiles.py  convert_raceline_ros1bag.py  convert_trackfile.py  create_trackfile.py  display_label.py  display_positions_from_db.py  display_steering.py  evaluate_bezier_curve_jumpiness.py  framerate_analysis.py  generate_control_labels.py  generate_local_raceline_labels.py  generate_multiagent_labels.py  generate_pose_labels.py  generate_pose_sequence_key_file.py  generate_pose_sequence_labels.py  generate_pose_steering_labels.py  generate_steering_labels.py  image_client_test.py  image_server.py  images_to_video.py  imdir_to_lmdb.py  optflow_utils.py  plot_frame_rate.py  plot_trajectories.py  pose_sequence_label_server.py  pose_sequence_labeldir_to_lmdb.py  quaternion_tests.py  setup.py  split_keyfile.py  unpackros1bag.py  unpackros1bagimages.py  unpackros1baglaserscans.py
data-logger/python/deepracing/: __init__.py  arma_utils.py
data-logger/python/pose_utils/: __init__.py  pose_utils.py
data-logger/python/proto_types/: ImageLabel_pb2.py  LabeledImage_pb2.py  PacketCarStatusData_pb2.py  PacketEventData_pb2.py  PacketHeader_pb2.py  PacketParticipantsData_pb2.py  PacketSessionData_pb2.py  ParticipantData_pb2.py  TimestampedPacketCarSetupData_pb2.py  TimestampedPacketCarTelemetryData_pb2.py  (+4 more)
data-logger/python_binding/: CMakeLists.txt  pybind_module.cpp  pyf1_test.py
data-logger/scripts/: .gitignore  TimestampedImage_pb2.py  TimestampedUDPData_pb2.py  plot_calibration.py  plot_racelines.py
data-logger/src/: common_extractor.cpp  deepf1_gsoap.cpp  deepf1_gsoapC.cpp  deepf1_gsoap_env.cpp  f1_datalogger.cpp  gsoap_conversions.cpp  gsoap_test.cpp  logger.cpp  math_utils.cpp  multi_threaded_capture.cpp  nsmap.cpp  pcl_types.cpp  screen_video_capture.cpp  simple_poc_screen_listener.cpp  simple_screen_listener.cpp  simple_udp_client.cpp  simple_udp_listener.cpp  simple_udp_server.cpp  simulated_telemetry_server.cpp  stdsoap2.cpp  steering_extractor.cpp
data-logger/tracks/: Abu_Dhabi_boundaries.track  Abu_Dhabi_innerlimit.track  Abu_Dhabi_outerlimit.track  Abu_Dhabi_racingline.track  Australia_aggressive.json  Australia_baseline.json  Australia_boundaries.json  Australia_boundaries.track  Australia_centerline.json  Australia_highbrake.json  Australia_highca.json  Australia_hyperaggressive.json  Australia_innerlimit.arma.txt  Australia_innerlimit.json  Australia_innerlimit.track  Australia_lowbraking.json  Australia_lowca.json  Australia_outerlimit.arma.txt  Australia_outerlimit.json  Australia_outerlimit.track  Australia_racingline.arma.txt  Australia_racingline.json  Australia_racingline.pkl  Australia_racingline.track  Australia_safe.json  Australia_startingpose.json  Austria_boundaries.track  Austria_innerlimit.json  Austria_innerlimit.track  Austria_outerlimit.json  Austria_outerlimit.track  Austria_racingline.track  Azerbaijan_boundaries.track  Azerbaijan_innerlimit.track  Azerbaijan_outerlimit.track  Azerbaijan_racingline.track  Bahrain_boundaries.track  Bahrain_innerlimit.track  Bahrain_outerlimit.track  Bahrain_racingline.track  (+143 more)
deepracing_cpp/: CMakeLists.txt  deepracing_cpp-config.cmake.in  package.xml
deepracing_cpp/cmake/: find_deps.cmake.in
deepracing_cpp/src/: pcl_types.cpp  track_map.cpp  utils.cpp
deepracing_cpp/waymo_tensorflow/: .gitignore  CMakeLists.txt  py_waymo_conversions.cpp  pybind11_module.cpp  scenario_to_tfexamples.cpp
ros2bindings/f1_datalogger_ros/: CMakeLists.txt  colcon.pkg  package.xml
rosbindings/f1_datalogger_msgs/: CMakeLists.txt  package.xml
rosbindings/f1_datalogger_provider/: CMakeLists.txt  addpythonpath.ps.in  f1_datalogger_provider-extras.cmake  f1_datalogger_provider-extras.cmake.in  package.xml
rosbindings/f1_datalogger_ros/: CMakeLists.txt  package.xml
rosbindings/f1_datalogger_rospy/: package.xml  setup.py
(+929 files in other folders)
