<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>deepracing_cpp</name>
  <version>0.0.0</version>
  <description>Some useful, ROS-agnostic, C++ classes and utility functions for interacting with the DeepRacing environment</description>
  <maintainer email="ttw2xk@virginia.edu">Trent Weiss</maintainer>
  <license>Apache</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
