cmake_minimum_required(VERSION 2.8.12)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
find_package(PythonLibs 3 REQUIRED)
find_package(NumPy REQUIRED) 
add_subdirectory(pybind11)
include_directories(${PYTHON_INCLUDE_DIRS})
include_directories(${PYTHON_NUMPY_INCLUDE_DIR})
include_directories(${PYBIND11_INCLUDE_DIR})
include_directories(cv_converter)
MESSAGE( " *** NumPy_INCLUDE_DIR : " ${PYTHON_NUMPY_INCLUDE_DIR} ) 


add_library(pybind_helper cv_converter/ndarray_converter.cpp)
target_link_libraries(pybind_helper ${OpenCV_LIBS} ${PYTHON_LIBRARY})
add_library(pyf1_datalogger MODULE pybind_module.cpp)
target_link_libraries(pyf1_datalogger ${PROJECT_NAME}_data_capture pybind_helper pybind11::module)
set_target_properties(pyf1_datalogger PROPERTIES PREFIX "${PYTHON_MODULE_PREFIX}"
                                         SUFFIX "${PYTHON_MODULE_EXTENSION}")
